src/test/deca/context/invalid/Objet/same_param_repeted2.deca
// Description:
//    test de faire répéter le même paramètre deux fois dans une méthode mais de type différent 
//
// Resultats:
//  12:12: Arguments in a function must be different 
//
// Historique:
//    cree le 20/01/2022

class A  {
    int i ;
    int get(int i , boolean i){}
    
}


{}



